--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div id="spinner-div" >
-        <img id="spinner-img" src="images/spinner.gif" alt="Loading">
+        <img id="spinner-img" src="/images/spinner.gif" alt="Loading">
     </div>
     <main>
         <br><br>
